--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "body-parser": "^1.20.0",
+    "brew": "^0.0.8",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
@@ -13,12 +14,20 @@
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "example",
+    "heroku"
+  ],
+  "engines": {
+    "node": "16.x"
   },
   "name": "onesta-crm-new-node",
   "version": "1.0.0",
-  "main": "app.js",
-  "author": "",
-  "license": "ISC",
+  "main": "web.js",
+  "author": "Onesta",
+  "license": "MIT",
   "description": ""
 }
